--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -3,7 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/abient">
-
+<TextView
+    android:id="@+id/test"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/name"
         android:textColor="@color/purple"
